syntax = "proto3";
package ru.ton618.hlds.service.v1;

option go_package = "ru.ton618.hlds/internal/api";
option java_multiple_files = true;
option java_package = "ru.ton618.hlds.v1";
option java_outer_classname = "HalfLifeDedicatedServer";
import "hlds_messages.proto";



service HalfLifeDedicatedServer{

  rpc ExecuteRconCommand(ru.ton618.hlds.model.v1.RconCommand) returns (ru.ton618.hlds.model.v1.RconCommandResult);
}




